# AIHungerGames

./: .gitignore  architecture.md  coding_rules.md  project.md  pyproject.toml  tasks.md
ai_hunger_games/: __init__.py  cli.py
ai_hunger_games/agents/: __init__.py  agent.py  memory.py  personality.py  registry.py
ai_hunger_games/arena/: __init__.py  controller.py  elimination.py  round_state.py
ai_hunger_games/core/: config.py  logging_setup.py  ollama_client.py
ai_hunger_games/evolution/: __init__.py  personality_generator.py  post_mortem.py  replacement.py
ai_hunger_games/observability/: __init__.py  events.py  logger.py  replay.py
ai_hunger_games/storage/: __init__.py
ai_hunger_games/voting/: __init__.py  aggregation.py  strategy.py  types.py
config/: settings.yaml
prompts/: .gitkeep
tests/: __init__.py  test_agent.py  test_arena_controller.py  test_arena_evolution_integration.py  test_arena_voting_integration.py  test_config.py  test_elimination.py  test_event_logger.py  test_memory.py  test_ollama_client.py  test_personality.py  test_personality_generator.py  test_post_mortem.py  test_registry.py  test_replacement.py  test_replay.py  test_voting_aggregation.py  test_voting_strategy.py  test_voting_types.py
